objects/Student_Absence__c.object
<CustomObject><fields>
        <fullName>Absent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Absent</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Attended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attended</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Date_Time__c</fullName>
        <formula>Session__r.Date_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Module__c</fullName>
        <formula>Student_Module__r.Programme_Module__r.Module__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Module</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Session__c</fullName>
        <label>Session</label>
        <referenceTo>Session__c</referenceTo>
        <relationshipName>Student_Attendances</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Student_Module__c</fullName>
        <label>Student Module</label>
        <referenceTo>Student_Module__c</referenceTo>
        <relationshipName>Student_Attendances</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Student Applicant, Full Student, Student Pre-Reg</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Student_Attendances</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Student Absence</label><nameField>
        <displayFormat>SAR-{00000000}</displayFormat>
        <label>Attendance Ref</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Student Absences</pluralLabel><sharingModel>ControlledByParent</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>